feat: Ajout d'un nouvel endpoint
