# src/main/resources/static/openapi.yml
@@ -1,10 +1,32 @@
 openapi: 3.0.0
 info:
-  title: Example API
+  title: Tereroa API
   version: 1.0.0
 servers:
   - url: http://localhost:8080
 paths:
+  /vehicles/{id}/reservations:
+    get:
+      tags:
+        - Gestion des véhicules
+      summary: Consultation des réservations concernant un véhicule
+      operationId: getVehicleReservations
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ReservationDto'
+
   /vehicles/{id}:
     get:
       tags:
